# open_rm

./: CMakeLists.txt  package.xml
cfg/: mask_to_skel.cfg
include/open_rm/Algebre/: equations.h  polynomes.h
include/open_rm/AxeMedian/: deltama.h  fdeltama.h  operations.h
include/open_rm/Blobs/: blobs.h
include/open_rm/Geometrie/: bezier.h  distances.h
include/open_rm/Graphe/: graphe.h  grapheGround.h  graphetopview.h  robotvirtuel.h
include/open_rm/Intervalles/: intervalles.h
include/open_rm/Mapping/: localOccGrid.h  localTopView.h
include/open_rm/Odometrie/: compasvisuel.h
include/open_rm/SignaturesVisuelles/: signaturesvisuelles.h
include/open_rm/TransfDistance/: transfdistance.h
include/open_rm/Vision/: calibrage.h
include/open_rm/VisionOmni/: birdeyeview.h  omnidma.h  paramscalib.h  sphereeq.h
launch/: cam_to_image.launch  dir_to_image.launch  dir_to_skel.launch  dir_to_skel_to_graph.launch  dir_to_skel_to_redt.launch  sim_laser_to_camera.launch  sim_to_laser_to_skel.launch
simulations/atrv_labyrinthe/: default.py  lab_15x15.blend1  launch.xml  modele.xml
simulations/atrv_labyrinthe/scripts/: atrv_labyrinthe_client.py
simulations/maps/: lab_15x15.blend
simulations/maps/generateurCouloir/: generateur.blend  generateur.blend1
simulations/maps/generateurLabyrinthe/: generateur.blend
src/: test_node.cpp
src/Algebre/: equations.cpp  polynomes.cpp
src/AxeMedian/: deltama.cpp  fdeltama.cpp  operations.cpp
src/Blobs/: blobs.cpp
src/Geometrie/: bezier.cpp  distances.cpp
src/Graphe/: robotvirtuel.cpp
src/Intervalles/: intervalles.cpp
src/Mapping/: localOccGrid.cpp  localTopView.cpp
src/Noeuds/: rm_cam_to_img.cpp  rm_dir_to_image.cpp  rm_laser_to_image.cpp  rm_laserscan_to_tf_pointcloud.cpp  rm_mask_to_skel.cpp  rm_mat_to_redt.cpp  rm_pointcloud_to_camera.cpp  rm_skel_to_graph.cpp  rm_system_cmd.cpp  rm_virtualcam_to_image.cpp
src/Odometrie/: compasvisuel.cpp
src/SignaturesVisuelles/: signaturesvisuelles.cpp
src/TransfDistance/: transfdistance.cpp
src/Vision/: calibrage.cpp  vision.cpp
src/VisionOmni/: birdeyeview.cpp  omnidma.cpp  paramscalib.cpp  sphereeq.cpp
